--- a/mole-game/test1.html
+++ b/mole-game/test1.html
@@ -12,6 +12,8 @@
   <script>
     let circleX = 50;
     let circleY = 50;
+    let rightKeyPressed = false;
+    let leftKeyPressed = false;
 
     // 그림판
     /** @type {HTMLCanvasElement} */
@@ -24,32 +26,47 @@
     /** @type {CanvasRenderingContext2D} */
     const context = myCanvas.getContext("2d");
 
-    // 도형 그리기 시작
-    context.beginPath();
-    // 동그라미
-    context.arc(circleX, circleY, 10, 0, 2 * Math.PI);
-    // 색깔
-    context.fillStyle = "blue";
-    // 그리기 완료
-    context.fill();
+    const draw = () => {
+      if (rightKeyPressed) {
+        circleX = circleX + 1;
+      } else if (leftKeyPressed) {
+        circleY = circleY + 1;
+      }
+      context.clearRect(0, 0, myCanvas.width, myCanvas.height);
+      context.beginPath();
+      context.arc(circleX, circleY, 10, 0, 2 * Math.PI);
+      context.fillStyle = "blue";
+      context.fill();
+    };
 
-    document.onkeyup = (event) => {
-      console.log(event);
+    document.onkeydown = (event) => {
       if (event.keyCode == 39) {
-        context.clearRect(0, 0, myCanvas.width, myCanvas.height);
-        circleX = circleX + 25;
-        context.beginPath();
-        context.arc(circleX, circleY, 10, 0, 2 * Math.PI);
-        context.fillStyle = "blue";
-        context.fill();
+        rightKeyPressed = true;
       } else if (event.keyCode == 40) {
-        context.clearRect(0, 0, myCanvas.width, myCanvas.height);
-        circleY = circleY + 25;
-        context.beginPath();
-        context.arc(circleX, circleY, 10, 0, 2 * Math.PI);
-        context.fillStyle = "blue";
-        context.fill();
+        leftKeyPressed = true;
       }
     };
+    document.onkeyup = (event) => {
+      if (event.keyCode == 39) {
+        rightKeyPressed = false;
+      } else if (event.keyCode == 40) {
+        leftKeyPressed = false;
+      }
+    };
+
+    // document.onkeyup = (event) => {
+    //   console.log(event);
+    //   if (event.keyCode == 39) {
+    //     circleX = circleX + 25;
+    //   } else if (event.keyCode == 40) {
+    //     circleY = circleY + 25;
+    //   } else if (event.keyCode == 37) {
+    //     circleX = circleX - 25;
+    //   } else if (event.keyCode == 38) {
+    //     circleY = circleY - 25;
+    //   }
+    // };
+
+    setInterval(draw, 100);
   </script>
 </html>
